unpackaged/main/default/objects/Tutorial_Step_Draft__c/Tutorial_Step_Draft__c.object-meta.xml
<CustomObject>
    <label>Tutorial Step Draft</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tutorial Step Drafts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>