unpackaged/main/default/objects/Tutorial_Step_Draft__c/fields/Advance_On__c.field-meta.xml
<CustomField>
    <fullName>Advance_On__c</fullName>
    <label>Advance On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>button</fullName>
                <default>true</default>
                <label>button</label>
            </value>
            <value>
                <fullName>click</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>