unpackaged/main/default/objects/Tutorial_Step_Draft__c/fields/Last_Published__c.field-meta.xml
<CustomField>
    <fullName>Last_Published__c</fullName>
    <label>Last Published</label>
    <type>DateTime</type>
</CustomField>