unpackaged/main/default/objects/Tutorial_Step_Draft__c/fields/Target_Selector__c.field-meta.xml
<CustomField>
    <fullName>Target_Selector__c</fullName>
    <label>Target Selector</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>