unpackaged/main/default/objects/Tutorial_Step_Draft__c/fields/Tour__c.field-meta.xml
<CustomField>
    <fullName>Tour__c</fullName>
    <label>Tour</label>
    <referenceTo>Tutorial_Tour_Draft__c</referenceTo>
    <relationshipLabel>Tutorial Step Drafts</relationshipLabel>
    <relationshipName>Tutorial_Step_Drafts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>